# RaytracerAndRasterizer

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  a.out  cmake_install.cmake  run.sh  subdivide.cpp
HwRasterize/: CMakeLists.txt  GLSLObject.cpp  GLSLObject.h  Hrasterizer  Makefile  cmake_install.cmake  fragmentShader_passthrough.glsl  fragmentShader_passthroughBlinn_Phong.glsl  fragmentShader_passthrough_Lambertian.glsl  main.cpp  rasterizer  vertexShader_passthrough.glsl
OpenGL/: CMakeLists.txt  Makefile  glfwExample
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  test_pngWrite  test_readPNGFile  visualize.cpp  visualizer
glfw-master/tests/: inputlag  opacity
myRayLibs/: CMakeCache.txt  CMakeLists.txt  Makefile  SceneDataTypes.h  camera.cpp  camera.h  cmake_install.cmake  hitstruct.cpp  hitstruct.h  light.cpp  light.h  main.cpp  mat4.h  ray.cpp  ray.h  raytracer  scene.cpp  scene.cpp(copy_Shadows)  scene.h  shader.cpp  shader.h  shaderData.cpp  shaderData.h  shape.cpp  shape.h  test_XMLSceneParse.cpp  vec4.h
sceneXMLs/scenes_A/: CornellRoom_wWater.xml  areaLight.xml  oneSphereUp.xml  oneSphereUpPt.xml  simpleThreeSpheres.xml  simpleThreeSpheres_GlazedFloor.xml  simpleTwoSpheres.xml  simpleTwoSpheres_MirroredFloor.xml  tri.xml
sceneXMLs/scenes_B/: table.xml
src/: CMakeLists.txt  Makefile  Vector3D.h  cmake_install.cmake  handleGraphicsArgs.cpp  handleGraphicsArgs.h
utests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  utest_Failure  utest_Success  utest_Vector3D
